--- a/index.html.html
+++ b/index.html.html
@@ -85,7 +85,7 @@
                             </div>
 
                             <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-default" id="btn_raiz3"> '&#8730 </button>
+                                <button type="button" class="btn btn-default" id="btn_raiz3"> &#8730 </button>
                             </div>
 
                             <div class="btn-group" role="group">
@@ -108,7 +108,7 @@
                             </div>
 
                             <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-default" id="btn_raiz2"> '&#8731 </button>
+                                <button type="button" class="btn btn-default" id="btn_raiz2"> &#8731 </button>
                             </div>
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-default" id="btn_tg">Xn</button>
@@ -181,21 +181,9 @@
             </div>
         </div>
     </div>
-    <script src="index.js"></script>
 </body>
 
+
+
+
 </html>
-
-dos iguales son comparativos no exactos y tres iguales es como comparacion exacta
-
-let numero = 2;
-let numero2 = 5;
-
-console.log(((numero + numero2 == 5) && (numero2 == 2 )) === true) ? "es correcto" : "no es correcto"; tiene que tener
-las dos como true "and"
-
-console.log(((numero + numero2 == 5) || (numero2 == 2 )) === true) ? "es correcto" : "no es correcto"; tien que cumplir
-solo una condicion "or"
-
-console.log((!(numero + numero2 == 5) === true) ? "es correcto" : "no es correcto"; tien que cumplir solo una condicion
-"or"
